--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,12 +12,12 @@
 
     <meta
       name="description"
-      content="Estudio FM - Estudio Juridico de amplia trayectoria en el derecho. Grandes profesionales especializados y diversas areas del derecho. Con asiento en Cordoba, Argentina."
+      content="Estudio FL - Estudio Juridico de amplia trayectoria en el derecho. Grandes profesionales especializados y diversas areas del derecho. Con asiento en Cordoba, Argentina."
     />
 
-    <title>ESTUDIO FM - Lideres en Derecho - Contacto</title>
+    <title>ESTUDIO FL - Lideres en Derecho - Contacto</title>
 
-    <!-- CSS BOOTSTRAP -->
+<!-- CSS BOOTSTRAP -->
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css"
@@ -26,11 +26,12 @@
       crossorigin="anonymous"
     />
 
-    <!-- CSS -->
+<!-- CSS -->
 
     <link rel="stylesheet" href="../css/estilos.css" />
 
-    <!-- FUENTES -->
+<!-- FUENTES -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -46,16 +47,16 @@
   </head>
 
   <body class="container-fluid">
+
+<!-- HEADER LOGO -->
+
     <header>
       <div class="row logo">
-        <a href="index.html"
-          ><img
-            src="../multimedia/logoEstudio.png"
-            alt="logo"
-            class="img-fluid logoLg"
-        /></a>
+        <a href="index.html"><img src="../multimedia/logoEstudio.png" alt="logo" class="img-fluid logoLg"/></a>
       </div>
     </header>
+
+<!-- NAV BAR -->
 
     <nav class="navbar navbar-expand-lg navbar-light navFondo">
       <div class="container-fluid">
@@ -116,6 +117,8 @@
       </div>
     </nav>
 
+<!-- ENCABEZADO -->
+
     <div class="container-fluid encabezadoContacto">
       <p class="tituloEncabezado">CONTACTO</p>
     </div>
@@ -129,66 +132,57 @@
     </div>
     <br /><br />
 
+<!-- DATOS CONTACTO -->
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-12 col-lg-4">
-
-          <!-- <div class="card tarjetaContactoDireccion">
-            <div class="row g-0">
-              <div class="col-lg-2 imagenContacto">
-                <img
-                  src="../multimedia/location.png"
-                  class="img-fluid rounded-start"
-                  alt="..."
-                />
-              </div>
-              <div class="col-lg-10">
-                <div class="" style="margin-left: 10px">
-                  <p class="card-title tituloContacto">Visitanos en:</p>
-                  <p class="card-text">
-                    Av. Hipolito Yrigoyen 146 - Piso 6
-                    <br />
-                    Ciudad de Cordoba
-                    <br />
-                    CP 5000
-                  </p>
-                </div>
-
-              </div>
-            </div>
-          </div> -->
-
           <div class="tarjetaContactoDireccion d-flex align-items-center">
             <div class="imagenContacto">
-            <img src="../multimedia/location.png" alt="" style="margin-right: 10px;">
+              <img
+                src="../multimedia/location.png"
+                alt="ubicacion"
+                style="margin-right: 10px"
+              />
             </div>
             <div class="textoContacto">
-            <p class="tituloContacto">Visitanos en:</p>
-            Av. Hipolito Yrigoyen 146 - Piso 6
-            <br>
-            Ciudad de Cordoba - CP 5000
+              <p class="tituloContacto">Visitanos en:</p>
+              Av. Hipolito Yrigoyen 146 - Piso 6
+              <br />
+              Ciudad de Cordoba - CP 5000
             </div>
           </div>
 
           <div class="tarjetaContactoEmail d-flex align-items-center">
             <div class="imagenContacto">
-            <img src="../multimedia/email.png" alt="" style="margin-right: 10px;">
-          </div>
-          <div class="textoContacto">
-            <p class="tituloContacto"> Correo electrónico: </p>
-            contacto@estudiofl.com.ar</div>
+              <img
+                src="../multimedia/email.png"
+                alt="email"
+                style="margin-right: 10px"
+              />
+            </div>
+            <div class="textoContacto">
+              <p class="tituloContacto">Correo electrónico:</p>
+              contacto@estudiofl.com.ar
+            </div>
           </div>
 
           <div class="tarjetaContactoTelefono d-flex align-items-center">
             <div class="imagenContacto">
-            <img src="../multimedia/phone-call.png" alt="" style="margin-right: 10px;">
+              <img
+                src="../multimedia/phone-call.png"
+                alt="telefono"
+                style="margin-right: 10px"
+              />
+            </div>
+            <div class="textoContacto">
+              <p class="tituloContacto">Telefono:</p>
+              4608234 / 4608236
+            </div>
           </div>
-          <div class="textoContacto">
-            <p class="tituloContacto"> Telefono: </p>
-            4608234 / 4608236</div>
-          </div>
+        </div>
 
-      </div>
+<!-- MAPA -->
 
         <div class="col-sm-12 col-lg-8">
           <iframe
@@ -202,12 +196,17 @@
         </div>
       </div>
     </div>
-    <br />
+    <br/>
+
+    <br/>
+
     <div class="row">
       <div class="col-lg-4 linea2"></div>
       <div class="col-lg-4 linea"></div>
       <div class="col-lg-4 linea2"></div>
     </div>
+
+<!-- FORMULARIO -->
 
     <section class="formulario">
       <div class="formularioContacto container-fluid">
@@ -270,13 +269,15 @@
 
     <p></p>
 
+<!-- FOOTER -->
+
     <footer>
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-2">
             <img
               src="../multimedia/logoEstudio.png"
-              alt=""
+              alt="logo estudio"
               class="logoFooter"
             />
           </div>
@@ -361,5 +362,6 @@
       integrity="sha384-PsUw7Xwds7x08Ew3exXhqzbhuEYmA2xnwc8BuD6SEr+UmEHlX8/MCltYEodzWA4u"
       crossorigin="anonymous"
     ></script>
+
   </body>
 </html>
