--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,16 +11,16 @@
 
     <title>ESTUDIO FL - Lideres en Derecho - Quienes Somos</title>
 
-    <!-- CSS BOOTSTRAP -->
+<!-- CSS BOOTSTRAP -->
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 
-    <!-- CSS -->
+<!-- CSS -->
 
     <link rel="stylesheet" href="../css/estilos.css">
 
-    <!-- FUENTES -->
+<!-- FUENTES -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -33,6 +33,8 @@
 
   <body class="container-fluid">
 
+<!-- HEADER LOGO -->
+
     <header>
 
       <div class="row logo">
@@ -43,6 +45,7 @@
   
   </header>
   
+<!-- NAV BAR   -->
   
   <nav class="navbar navbar-expand-lg navbar-light navFondo">
       <div class="container-fluid">
@@ -76,6 +79,8 @@
       </div>
     </nav>
 
+<!-- ENCABEZADO -->
+
     <section class="elEstudio">
 
       <div class="container-fluid encabezadoNosotros"> <p class="tituloEncabezado">EL ESTUDIO</p> </div>
@@ -88,6 +93,8 @@
         </div>
       </div>
       <br><br>
+
+<!-- EL ESTUDIO -->
 
       <div class="container-fluid">
         <div class="row">
@@ -126,6 +133,8 @@
       <br>
       <section class="separador"></section>
       <br>
+
+<!-- PROFESIONALES -->
 
       <h3 class="tituloAzul">Nuestro equipo de profesionales</h3>
 
@@ -286,6 +295,8 @@
     </section>
 
     <p></p>
+
+<!-- FOOTER -->
     
     <footer>
       <div class="container-fluid ">
@@ -320,8 +331,6 @@
       </div>
 
     </footer>
-    
-
 
     <script
     src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
